playtesting/sim-reports/archive/v1.0-alpha.8/audyt_level3_raport_4p.md
# Raport Precyzyjnego Audytu Poziomu 3 (Parametry Pojedynczych Kart) — Wersja Balansu: v1.0-alpha.8

**Wersja Balansu:** `v1.0-alpha.8` | **Data:** 2026-08-19 12:21 | **Przeanalizowano Wariantów Kart:** 187 | **Próba:** 3000 gier/setup | **Czas:** 1536.51s
**Filtry:** Parametry: `cost,heresy` | Frakcja: `all` | Karta: `Wszystkie`
**Wynik Bazy Poziomu 3 (Global):** `🟡 77.8 pkt` | 3p: `0.0 pkt` | 4p: `77.8 pkt` | 5p: `0.0 pkt`

## 1. Tabela Wyników Balansu i Delty (Zmiany) dla Każdego Składu Graczy

### 🌟 Warianty z Zyskiem (Dowolna kategoria > 0) — Posortowane wg Global Delta (4)

| ID | Testowany Parametr Karty | Global (baza → test) | 3p (baza → test) | 4p (baza → test) | 5p (baza → test) | Status Balansu |
| :---: | :--- | :---: | :---: | :---: | :---: | :---: |
| `L3_BAZA` | Baza (Bieżące parametry wszystkich kart) | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-11_COST_PLUS1` | GC-11 (Fałszywe Świadectwo Cechu): cost 1 → 2 | 77.8 → 🟡 ** 78.0** (`⬆️ +0.2`) | 0.0 | 77.8 → 78.0 (`⬆️ +0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-11_COST_MINUS1` | GC-11 (Fałszywe Świadectwo Cechu): cost 1 → 0 | 77.8 → 🟡 ** 78.0** (`⬆️ +0.2`) | 0.0 | 77.8 → 78.0 (`⬆️ +0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-03_COST_MINUS1` | GC-03 (Podrzucenie Księgi): cost 1 → 0 | 77.8 → 🟡 ** 77.9** (`⬆️ +0.1`) | 0.0 | 77.8 → 77.9 (`⬆️ +0.1`) | 0.0 | ⚪ OPTYMALNY |

<details>
<summary><b>🔻 Pokaż pozostałe 183 wariantów bez zysku (wszystkie delty ≤ 0)...</b></summary>

| ID | Testowany Parametr Karty | Global (baza → test) | 3p (baza → test) | 4p (baza → test) | 5p (baza → test) | Status Balansu |
| :---: | :--- | :---: | :---: | :---: | :---: | :---: |
| `L3_CAA-01_COST_PLUS1` | CAA-01 (Przejście Podziemiami): cost 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-01_HERESY_PLUS1` | CAA-01 (Przejście Podziemiami): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-03_COST_PLUS1` | CAA-03 (Cień na Rynku): cost 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-05_COST_PLUS1` | CAA-05 (Ukryty Kurier): cost 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-07_COST_PLUS1` | CAA-07 (Szantaż Bractwa): cost 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-07_HERESY_PLUS1` | CAA-07 (Szantaż Bractwa): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-09_COST_PLUS1` | CAA-09 (Kurier Relikwii): cost 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-10_COST_MINUS1` | CAA-10 (Echo Alhambry): cost 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-11_COST_PLUS1` | CAA-11 (Nocna Zmiana Warty): cost 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-11_COST_MINUS1` | CAA-11 (Nocna Zmiana Warty): cost 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-11_HERESY_PLUS1` | CAA-11 (Nocna Zmiana Warty): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-01_HERESY_PLUS1` | GC-01 (Przekupiony Strażnik): heresy 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-01_HERESY_MINUS1` | GC-01 (Przekupiony Strażnik): heresy 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-03_HERESY_PLUS1` | GC-03 (Podrzucenie Księgi): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-05_HERESY_PLUS1` | GC-05 (Fałszywy Świadek): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-07_COST_MINUS1` | GC-07 (Skrytobójstwo): cost 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-07_HERESY_PLUS1` | GC-07 (Skrytobójstwo): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-10_HERESY_PLUS1` | GC-10 (Upadek Domu): heresy 2 → 3 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-11_HERESY_PLUS1` | GC-11 (Fałszywe Świadectwo Cechu): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-12_HERESY_PLUS1` | GC-12 (Złodziejski Zwiad): heresy 2 → 3 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-12_HERESY_MINUS1` | GC-12 (Złodziejski Zwiad): heresy 2 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KB-03_HERESY_PLUS1` | KB-03 (Plotka Dworska): heresy 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KB-03_HERESY_MINUS1` | KB-03 (Plotka Dworska): heresy 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KB-06_HERESY_PLUS1` | KB-06 (Areszt Królewski): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-01_HERESY_PLUS1` | KT-01 (Rytuał Przejścia): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-02_HERESY_PLUS1` | KT-02 (Transmutacja Złota): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-04_HERESY_PLUS1` | KT-04 (Zwierciadło Herezji): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-07_HERESY_PLUS1` | KT-07 (Archiwum Ukryte): heresy 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-07_HERESY_MINUS1` | KT-07 (Archiwum Ukryte): heresy 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-08_HERESY_PLUS1` | KT-08 (Areszt Wiedzy): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-09_HERESY_PLUS1` | KT-09 (Fragment Kodeksu): heresy 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-11_COST_MINUS1` | KT-11 (Medytacja Sefirot): cost 2 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-11_HERESY_PLUS1` | KT-11 (Medytacja Sefirot): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-12_COST_PLUS1` | KT-12 (Strażnik Archiwum): cost 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-12_HERESY_PLUS1` | KT-12 (Strażnik Archiwum): heresy 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-12_HERESY_MINUS1` | KT-12 (Strażnik Archiwum): heresy 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-01_COST_PLUS1` | SO-01 (Patrol Familiariuszy): cost 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-01_COST_MINUS1` | SO-01 (Patrol Familiariuszy): cost 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-01_HERESY_PLUS1` | SO-01 (Patrol Familiariuszy): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-02_COST_MINUS1` | SO-02 (Skarbiec Trybunału): cost 1 → 0 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-03_COST_PLUS1` | SO-03 (Podejrzenie): cost 2 → 3 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-03_COST_MINUS1` | SO-03 (Podejrzenie): cost 2 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-03_HERESY_PLUS1` | SO-03 (Podejrzenie): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-05_COST_PLUS1` | SO-05 (Wezwanie do Trybunału): cost 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-05_HERESY_PLUS1` | SO-05 (Wezwanie do Trybunału): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-06_COST_PLUS1` | SO-06 (Areszt Trybunalski): cost 2 → 3 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-06_COST_MINUS1` | SO-06 (Areszt Trybunalski): cost 2 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-06_HERESY_PLUS1` | SO-06 (Areszt Trybunalski): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-07_COST_PLUS1` | SO-07 (Przesłuchanie Oficjum): cost 2 → 3 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-07_COST_MINUS1` | SO-07 (Przesłuchanie Oficjum): cost 2 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-07_HERESY_PLUS1` | SO-07 (Przesłuchanie Oficjum): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-09_COST_PLUS1` | SO-09 (Świadek Koronny): cost 2 → 3 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-09_COST_MINUS1` | SO-09 (Świadek Koronny): cost 2 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-09_HERESY_PLUS1` | SO-09 (Świadek Koronny): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-10_HERESY_MINUS1` | SO-10 (Oczyść Miasto): heresy 2 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-12_COST_PLUS1` | SO-12 (Straż Trybunalska): cost 1 → 2 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-12_HERESY_PLUS1` | SO-12 (Straż Trybunalska): heresy 0 → 1 | 🟡 ** 77.8** | 0.0 | 77.8 | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-02_COST_PLUS1` | CAA-02 (Złoto z Kryjówki): cost 0 → 1 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-04_HERESY_PLUS1` | CAA-04 (Fałszywy Trop): heresy 0 → 1 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-10_COST_PLUS1` | CAA-10 (Echo Alhambry): cost 1 → 2 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-12_COST_PLUS1` | CAA-12 (Skrytka w Murach): cost 0 → 1 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-02_COST_MINUS1` | GC-02 (Czarny Rynek): cost 1 → 0 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-05_COST_PLUS1` | GC-05 (Fałszywy Świadek): cost 0 → 1 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-07_COST_PLUS1` | GC-07 (Skrytobójstwo): cost 1 → 2 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-08_HERESY_PLUS1` | GC-08 (Zatrute Złoto): heresy 1 → 2 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-12_COST_PLUS1` | GC-12 (Złodziejski Zwiad): cost 0 → 1 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KB-03_COST_PLUS1` | KB-03 (Plotka Dworska): cost 1 → 2 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-01_COST_PLUS1` | KT-01 (Rytuał Przejścia): cost 1 → 2 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-01_COST_MINUS1` | KT-01 (Rytuał Przejścia): cost 1 → 0 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-04_COST_MINUS1` | KT-04 (Zwierciadło Herezji): cost 1 → 0 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-08_COST_MINUS1` | KT-08 (Areszt Wiedzy): cost 1 → 0 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-11_HERESY_PLUS1` | SO-11 (Dekret Czystości Wiary): heresy 1 → 2 | 77.8 → 🟡 ** 77.7** (`-0.1`) | 0.0 | 77.8 → 77.7 (`-0.1`) | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-06_COST_PLUS1` | CAA-06 (Ucieczka z Lochów): cost 0 → 1 | 77.8 → 🟡 ** 77.6** (`-0.2`) | 0.0 | 77.8 → 77.6 (`-0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-06_COST_MINUS1` | KT-06 (Przesłuchanie Imienia): cost 2 → 1 | 77.8 → 🟡 ** 77.6** (`-0.2`) | 0.0 | 77.8 → 77.6 (`-0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-07_COST_MINUS1` | KT-07 (Archiwum Ukryte): cost 1 → 0 | 77.8 → 🟡 ** 77.6** (`-0.2`) | 0.0 | 77.8 → 77.6 (`-0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-11_COST_PLUS1` | KT-11 (Medytacja Sefirot): cost 2 → 3 | 77.8 → 🟡 ** 77.6** (`-0.2`) | 0.0 | 77.8 → 77.6 (`-0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-02_COST_PLUS1` | SO-02 (Skarbiec Trybunału): cost 1 → 2 | 77.8 → 🟡 ** 77.6** (`-0.2`) | 0.0 | 77.8 → 77.6 (`-0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-02_HERESY_PLUS1` | SO-02 (Skarbiec Trybunału): heresy 0 → 1 | 77.8 → 🟡 ** 77.6** (`-0.2`) | 0.0 | 77.8 → 77.6 (`-0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_SO-11_HERESY_MINUS1` | SO-11 (Dekret Czystości Wiary): heresy 1 → 0 | 77.8 → 🟡 ** 77.6** (`-0.2`) | 0.0 | 77.8 → 77.6 (`-0.2`) | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-08_COST_PLUS1` | CAA-08 (Kaptur Nocy): cost 1 → 2 | 77.8 → 🟡 ** 77.5** (`-0.3`) | 0.0 | 77.8 → 77.5 (`-0.3`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-02_COST_PLUS1` | KT-02 (Transmutacja Złota): cost 1 → 2 | 77.8 → 🟡 ** 77.5** (`-0.3`) | 0.0 | 77.8 → 77.5 (`-0.3`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-07_COST_PLUS1` | KT-07 (Archiwum Ukryte): cost 1 → 2 | 77.8 → 🟡 ** 77.4** (`-0.4`) | 0.0 | 77.8 → 77.4 (`-0.4`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-08_COST_PLUS1` | KT-08 (Areszt Wiedzy): cost 1 → 2 | 77.8 → 🟡 ** 77.4** (`-0.4`) | 0.0 | 77.8 → 77.4 (`-0.4`) | 0.0 | ⚪ OPTYMALNY |
| `L3_CAA-08_HERESY_PLUS1` | CAA-08 (Kaptur Nocy): heresy 0 → 1 | 77.8 → 🟡 ** 77.3** (`-0.5`) | 0.0 | 77.8 → 77.3 (`-0.5`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KB-06_COST_MINUS1` | KB-06 (Areszt Królewski): cost 2 → 1 | 77.8 → 🟡 ** 77.3** (`-0.5`) | 0.0 | 77.8 → 77.3 (`-0.5`) | 0.0 | ⚪ OPTYMALNY |
| `L3_KT-09_COST_PLUS1` | KT-09 (Fragment Kodeksu): cost 2 → 3 | 77.8 → 🟡 ** 77.3** (`-0.5`) | 0.0 | 77.8 → 77.3 (`-0.5`) | 0.0 | ⚪ OPTYMALNY |
| `L3_GC-01_COST_PLUS1` | GC-01 (Przekupiony Strażnik): cost 2 → 3 | 77.8 → 🟡 ** 77.2** (`-0.6`) | 0.0 | 77.8 → 77.2 (`-0.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-01_COST_MINUS1` | GC-01 (Przekupiony Strażnik): cost 2 → 1 | 77.8 → 🟡 ** 77.2** (`-0.6`) | 0.0 | 77.8 → 77.2 (`-0.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-09_COST_MINUS1` | GC-09 (Lista Dłużników): cost 3 → 2 | 77.8 → 🟡 ** 77.2** (`-0.6`) | 0.0 | 77.8 → 77.2 (`-0.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-04_COST_PLUS1` | KT-04 (Zwierciadło Herezji): cost 1 → 2 | 77.8 → 🟡 ** 77.2** (`-0.6`) | 0.0 | 77.8 → 77.2 (`-0.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-06_HERESY_PLUS1` | KT-06 (Przesłuchanie Imienia): heresy 0 → 1 | 77.8 → 🟡 ** 77.2** (`-0.6`) | 0.0 | 77.8 → 77.2 (`-0.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-03_COST_PLUS1` | GC-03 (Podrzucenie Księgi): cost 1 → 2 | 77.8 → 🟡 ** 77.1** (`-0.7`) | 0.0 | 77.8 → 77.1 (`-0.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-06_COST_MINUS1` | GC-06 (Szantaż): cost 2 → 1 | 77.8 → 🟡 ** 76.9** (`-0.9`) | 0.0 | 77.8 → 76.9 (`-0.9`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-01_COST_MINUS1` | KB-01 (Rozkaz Dworu): cost 1 → 0 | 77.8 → 🟡 ** 76.9** (`-0.9`) | 0.0 | 77.8 → 76.9 (`-0.9`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-05_HERESY_PLUS1` | KT-05 (Wskazówka Cyklu): heresy 1 → 2 | 77.8 → 🟡 ** 76.8** (`-1.0`) | 0.0 | 77.8 → 76.8 (`-1.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-11_COST_PLUS1` | SO-11 (Dekret Czystości Wiary): cost 1 → 2 | 77.8 → 🟡 ** 76.8** (`-1.0`) | 0.0 | 77.8 → 76.8 (`-1.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-05_HERESY_PLUS1` | CAA-05 (Ukryty Kurier): heresy 0 → 1 | 77.8 → 🟡 ** 76.7** (`-1.1`) | 0.0 | 77.8 → 76.7 (`-1.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-01_HERESY_MINUS1` | KB-01 (Rozkaz Dworu): heresy 1 → 0 | 77.8 → 🟡 ** 76.7** (`-1.1`) | 0.0 | 77.8 → 76.7 (`-1.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-05_HERESY_PLUS1` | KB-05 (List Żelazny): heresy 0 → 1 | 77.8 → 🟡 ** 76.7** (`-1.1`) | 0.0 | 77.8 → 76.7 (`-1.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-10_COST_PLUS1` | KB-10 (Pieczęć Korony): cost 3 → 4 | 77.8 → 🟡 ** 76.7** (`-1.1`) | 0.0 | 77.8 → 76.7 (`-1.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-04_COST_MINUS1` | SO-04 (Publiczne Ostrzeżenie): cost 1 → 0 | 77.8 → 🟡 ** 76.7** (`-1.1`) | 0.0 | 77.8 → 76.7 (`-1.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-08_HERESY_MINUS1` | GC-08 (Zatrute Złoto): heresy 1 → 0 | 77.8 → 🟡 ** 76.6** (`-1.2`) | 0.0 | 77.8 → 76.6 (`-1.2`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-11_HERESY_PLUS1` | KB-11 (Tajny Emisariusz): heresy 0 → 1 | 77.8 → 🟡 ** 76.6** (`-1.2`) | 0.0 | 77.8 → 76.6 (`-1.2`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-04_COST_MINUS1` | GC-04 (Informator): cost 1 → 0 | 77.8 → 🟡 ** 76.5** (`-1.3`) | 0.0 | 77.8 → 76.5 (`-1.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-09_COST_PLUS1` | GC-09 (Lista Dłużników): cost 3 → 4 | 77.8 → 🟡 ** 76.5** (`-1.3`) | 0.0 | 77.8 → 76.5 (`-1.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-03_HERESY_PLUS1` | KT-03 (Zakazana Wiedza): heresy 0 → 1 | 77.8 → 🟡 ** 76.5** (`-1.3`) | 0.0 | 77.8 → 76.5 (`-1.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-03_HERESY_MINUS1` | CAA-03 (Cień na Rynku): heresy 1 → 0 | 77.8 → 🟡 ** 76.4** (`-1.4`) | 0.0 | 77.8 → 76.4 (`-1.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-10_COST_PLUS1` | GC-10 (Upadek Domu): cost 4 → 5 | 77.8 → 🟡 ** 76.4** (`-1.4`) | 0.0 | 77.8 → 76.4 (`-1.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-06_COST_PLUS1` | KB-06 (Areszt Królewski): cost 2 → 3 | 77.8 → 🟡 ** 76.4** (`-1.4`) | 0.0 | 77.8 → 76.4 (`-1.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-02_HERESY_PLUS1` | CAA-02 (Złoto z Kryjówki): heresy 0 → 1 | 77.8 → 🟡 ** 76.3** (`-1.5`) | 0.0 | 77.8 → 76.3 (`-1.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-04_COST_PLUS1` | SO-04 (Publiczne Ostrzeżenie): cost 1 → 2 | 77.8 → 🟡 ** 76.3** (`-1.5`) | 0.0 | 77.8 → 76.3 (`-1.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-04_HERESY_PLUS1` | SO-04 (Publiczne Ostrzeżenie): heresy 0 → 1 | 77.8 → 🟡 ** 76.3** (`-1.5`) | 0.0 | 77.8 → 76.3 (`-1.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-06_COST_PLUS1` | GC-06 (Szantaż): cost 2 → 3 | 77.8 → 🟡 ** 76.2** (`-1.6`) | 0.0 | 77.8 → 76.2 (`-1.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-04_COST_MINUS1` | KB-04 (Faworyt Dworu): cost 2 → 1 | 77.8 → 🟡 ** 76.2** (`-1.6`) | 0.0 | 77.8 → 76.2 (`-1.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-10_COST_PLUS1` | SO-10 (Oczyść Miasto): cost 5 → 6 | 77.8 → 🟡 ** 76.2** (`-1.6`) | 0.0 | 77.8 → 76.2 (`-1.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-12_COST_MINUS1` | SO-12 (Straż Trybunalska): cost 1 → 0 | 77.8 → 🟡 ** 76.2** (`-1.6`) | 0.0 | 77.8 → 76.2 (`-1.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-10_HERESY_PLUS1` | KT-10 (Pieczęć Salomona): heresy 2 → 3 | 77.8 → 🟡 ** 76.1** (`-1.7`) | 0.0 | 77.8 → 76.1 (`-1.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-10_COST_MINUS1` | SO-10 (Oczyść Miasto): cost 5 → 4 | 77.8 → 🟡 ** 76.1** (`-1.7`) | 0.0 | 77.8 → 76.1 (`-1.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-04_COST_PLUS1` | GC-04 (Informator): cost 1 → 2 | 77.8 → 🟡 ** 76.0** (`-1.8`) | 0.0 | 77.8 → 76.0 (`-1.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-08_COST_PLUS1` | GC-08 (Zatrute Złoto): cost 1 → 2 | 77.8 → 🟡 ** 76.0** (`-1.8`) | 0.0 | 77.8 → 76.0 (`-1.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-11_COST_MINUS1` | SO-11 (Dekret Czystości Wiary): cost 1 → 0 | 77.8 → 🟡 ** 75.9** (`-1.9`) | 0.0 | 77.8 → 75.9 (`-1.9`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-10_HERESY_MINUS1` | GC-10 (Upadek Domu): heresy 2 → 1 | 77.8 → 🟡 ** 75.8** (`-2.0`) | 0.0 | 77.8 → 75.8 (`-2.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-12_HERESY_PLUS1` | CAA-12 (Skrytka w Murach): heresy 0 → 1 | 77.8 → 🟡 ** 75.7** (`-2.1`) | 0.0 | 77.8 → 75.7 (`-2.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-03_COST_MINUS1` | KB-03 (Plotka Dworska): cost 1 → 0 | 77.8 → 🟡 ** 75.7** (`-2.1`) | 0.0 | 77.8 → 75.7 (`-2.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-11_COST_MINUS1` | KB-11 (Tajny Emisariusz): cost 1 → 0 | 77.8 → 🟡 ** 75.7** (`-2.1`) | 0.0 | 77.8 → 75.7 (`-2.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-12_COST_MINUS1` | KB-12 (Szantaż Salonowy): cost 1 → 0 | 77.8 → 🟡 ** 75.7** (`-2.1`) | 0.0 | 77.8 → 75.7 (`-2.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-03_HERESY_PLUS1` | CAA-03 (Cień na Rynku): heresy 1 → 2 | 77.8 → 🟡 ** 75.5** (`-2.3`) | 0.0 | 77.8 → 75.5 (`-2.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-06_HERESY_PLUS1` | CAA-06 (Ucieczka z Lochów): heresy 0 → 1 | 77.8 → 🟡 ** 75.5** (`-2.3`) | 0.0 | 77.8 → 75.5 (`-2.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-04_HERESY_MINUS1` | KB-04 (Faworyt Dworu): heresy 1 → 0 | 77.8 → 🟡 ** 75.4** (`-2.4`) | 0.0 | 77.8 → 75.4 (`-2.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-08_COST_PLUS1` | SO-08 (Nasłanie Inkwizytora): cost 0 → 1 | 77.8 → 🟡 ** 75.4** (`-2.4`) | 0.0 | 77.8 → 75.4 (`-2.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-08_HERESY_PLUS1` | SO-08 (Nasłanie Inkwizytora): heresy 0 → 1 | 77.8 → 🟡 ** 75.4** (`-2.4`) | 0.0 | 77.8 → 75.4 (`-2.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_SO-10_HERESY_PLUS1` | SO-10 (Oczyść Miasto): heresy 2 → 3 | 77.8 → 🟡 ** 75.4** (`-2.4`) | 0.0 | 77.8 → 75.4 (`-2.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-04_HERESY_PLUS1` | KB-04 (Faworyt Dworu): heresy 1 → 2 | 77.8 → 🟡 ** 75.1** (`-2.7`) | 0.0 | 77.8 → 75.1 (`-2.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-08_HERESY_PLUS1` | KB-08 (Przekupstwo Sędziego): heresy 0 → 1 | 77.8 → 🟡 ** 75.1** (`-2.7`) | 0.0 | 77.8 → 75.1 (`-2.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-12_COST_PLUS1` | KB-12 (Szantaż Salonowy): cost 1 → 2 | 77.8 → 🟡 ** 75.1** (`-2.7`) | 0.0 | 77.8 → 75.1 (`-2.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-08_COST_MINUS1` | KB-08 (Przekupstwo Sędziego): cost 2 → 1 | 77.8 → 🟠 ** 74.8** (`-3.0`) | 0.0 | 77.8 → 74.8 (`-3.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-10_COST_MINUS1` | KB-10 (Pieczęć Korony): cost 3 → 2 | 77.8 → 🟠 ** 74.8** (`-3.0`) | 0.0 | 77.8 → 74.8 (`-3.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-05_HERESY_MINUS1` | KT-05 (Wskazówka Cyklu): heresy 1 → 0 | 77.8 → 🟠 ** 74.8** (`-3.0`) | 0.0 | 77.8 → 74.8 (`-3.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-07_COST_MINUS1` | KB-07 (Szantaż Pieczęcią): cost 2 → 1 | 77.8 → 🟠 ** 74.7** (`-3.1`) | 0.0 | 77.8 → 74.7 (`-3.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-06_COST_PLUS1` | KT-06 (Przesłuchanie Imienia): cost 2 → 3 | 77.8 → 🟠 ** 74.5** (`-3.3`) | 0.0 | 77.8 → 74.5 (`-3.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-02_COST_MINUS1` | KB-02 (Pobór Podatków): cost 1 → 0 | 77.8 → 🟠 ** 74.3** (`-3.5`) | 0.0 | 77.8 → 74.3 (`-3.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-07_HERESY_PLUS1` | KB-07 (Szantaż Pieczęcią): heresy 0 → 1 | 77.8 → 🟠 ** 74.3** (`-3.5`) | 0.0 | 77.8 → 74.3 (`-3.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-10_HERESY_MINUS1` | KB-10 (Pieczęć Korony): heresy 2 → 1 | 77.8 → 🟠 ** 74.3** (`-3.5`) | 0.0 | 77.8 → 74.3 (`-3.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-10_HERESY_MINUS1` | KT-10 (Pieczęć Salomona): heresy 2 → 1 | 77.8 → 🟠 ** 74.2** (`-3.6`) | 0.0 | 77.8 → 74.2 (`-3.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-01_HERESY_PLUS1` | KB-01 (Rozkaz Dworu): heresy 1 → 2 | 77.8 → 🟠 ** 74.0** (`-3.8`) | 0.0 | 77.8 → 74.0 (`-3.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-05_COST_MINUS1` | KB-05 (List Żelazny): cost 2 → 1 | 77.8 → 🟠 ** 74.0** (`-3.8`) | 0.0 | 77.8 → 74.0 (`-3.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-11_COST_PLUS1` | KB-11 (Tajny Emisariusz): cost 1 → 2 | 77.8 → 🟠 ** 74.0** (`-3.8`) | 0.0 | 77.8 → 74.0 (`-3.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-01_COST_PLUS1` | KB-01 (Rozkaz Dworu): cost 1 → 2 | 77.8 → 🟠 ** 73.8** (`-4.0`) | 0.0 | 77.8 → 73.8 (`-4.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-06_HERESY_PLUS1` | GC-06 (Szantaż): heresy 1 → 2 | 77.8 → 🟠 ** 73.6** (`-4.2`) | 0.0 | 77.8 → 73.6 (`-4.2`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-05_COST_PLUS1` | KB-05 (List Żelazny): cost 2 → 3 | 77.8 → 🟠 ** 73.6** (`-4.2`) | 0.0 | 77.8 → 73.6 (`-4.2`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-04_COST_PLUS1` | CAA-04 (Fałszywy Trop): cost 0 → 1 | 77.8 → 🟠 ** 73.1** (`-4.7`) | 0.0 | 77.8 → 73.1 (`-4.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-08_COST_MINUS1` | CAA-08 (Kaptur Nocy): cost 1 → 0 | 77.8 → 🟠 ** 73.1** (`-4.7`) | 0.0 | 77.8 → 73.1 (`-4.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-09_HERESY_PLUS1` | GC-09 (Lista Dłużników): heresy 1 → 2 | 77.8 → 🟠 ** 72.9** (`-4.9`) | 0.0 | 77.8 → 72.9 (`-4.9`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-02_HERESY_PLUS1` | KB-02 (Pobór Podatków): heresy 0 → 1 | 77.8 → 🟠 ** 72.5** (`-5.3`) | 0.0 | 77.8 → 72.5 (`-5.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-12_HERESY_PLUS1` | KB-12 (Szantaż Salonowy): heresy 0 → 1 | 77.8 → 🟠 ** 72.4** (`-5.4`) | 0.0 | 77.8 → 72.4 (`-5.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-08_COST_MINUS1` | GC-08 (Zatrute Złoto): cost 1 → 0 | 77.8 → 🟠 ** 72.2** (`-5.6`) | 0.0 | 77.8 → 72.2 (`-5.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-05_COST_MINUS1` | KT-05 (Wskazówka Cyklu): cost 1 → 0 | 77.8 → 🟠 ** 72.1** (`-5.7`) | 0.0 | 77.8 → 72.1 (`-5.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-07_COST_PLUS1` | KB-07 (Szantaż Pieczęcią): cost 2 → 3 | 77.8 → 🟠 ** 71.0** (`-6.8`) | 0.0 | 77.8 → 71.0 (`-6.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-09_HERESY_PLUS1` | CAA-09 (Kurier Relikwii): heresy 0 → 1 | 77.8 → 🟠 ** 70.8** (`-7.0`) | 0.0 | 77.8 → 70.8 (`-7.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-10_COST_PLUS1` | KT-10 (Pieczęć Salomona): cost 2 → 3 | 77.8 → 🟠 ** 70.3** (`-7.5`) | 0.0 | 77.8 → 70.3 (`-7.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-08_COST_PLUS1` | KB-08 (Przekupstwo Sędziego): cost 2 → 3 | 77.8 → 🟠 ** 70.2** (`-7.6`) | 0.0 | 77.8 → 70.2 (`-7.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_CAA-10_HERESY_PLUS1` | CAA-10 (Echo Alhambry): heresy 0 → 1 | 77.8 → 🟠 ** 70.1** (`-7.7`) | 0.0 | 77.8 → 70.1 (`-7.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-03_COST_PLUS1` | KT-03 (Zakazana Wiedza): cost 0 → 1 | 77.8 → 🟠 ** 70.0** (`-7.8`) | 0.0 | 77.8 → 70.0 (`-7.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-02_COST_MINUS1` | KT-02 (Transmutacja Złota): cost 1 → 0 | 77.8 → 🟠 ** 69.4** (`-8.4`) | 0.0 | 77.8 → 69.4 (`-8.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-06_HERESY_MINUS1` | GC-06 (Szantaż): heresy 1 → 0 | 77.8 → 🟠 ** 69.3** (`-8.5`) | 0.0 | 77.8 → 69.3 (`-8.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-09_HERESY_MINUS1` | GC-09 (Lista Dłużników): heresy 1 → 0 | 77.8 → 🟠 ** 69.0** (`-8.8`) | 0.0 | 77.8 → 69.0 (`-8.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-04_HERESY_MINUS1` | GC-04 (Informator): heresy 1 → 0 | 77.8 → 🟠 ** 68.6** (`-9.2`) | 0.0 | 77.8 → 68.6 (`-9.2`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-02_HERESY_MINUS1` | GC-02 (Czarny Rynek): heresy 1 → 0 | 77.8 → 🟠 ** 68.3** (`-9.5`) | 0.0 | 77.8 → 68.3 (`-9.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-02_COST_PLUS1` | KB-02 (Pobór Podatków): cost 1 → 2 | 77.8 → 🟠 ** 67.8** (`-10.0`) | 0.0 | 77.8 → 67.8 (`-10.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-09_HERESY_PLUS1` | KB-09 (Dekret Królewski): heresy 1 → 2 | 77.8 → 🟠 ** 67.6** (`-10.2`) | 0.0 | 77.8 → 67.6 (`-10.2`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-04_COST_PLUS1` | KB-04 (Faworyt Dworu): cost 2 → 3 | 77.8 → 🟠 ** 67.5** (`-10.3`) | 0.0 | 77.8 → 67.5 (`-10.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-10_COST_MINUS1` | GC-10 (Upadek Domu): cost 4 → 3 | 77.8 → 🟠 ** 66.4** (`-11.4`) | 0.0 | 77.8 → 66.4 (`-11.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-02_COST_PLUS1` | GC-02 (Czarny Rynek): cost 1 → 2 | 77.8 → 🟠 ** 66.2** (`-11.6`) | 0.0 | 77.8 → 66.2 (`-11.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-09_COST_PLUS1` | KB-09 (Dekret Królewski): cost 4 → 5 | 77.8 → 🟠 ** 66.1** (`-11.7`) | 0.0 | 77.8 → 66.1 (`-11.7`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-10_COST_MINUS1` | KT-10 (Pieczęć Salomona): cost 2 → 1 | 77.8 → 🟠 ** 65.3** (`-12.5`) | 0.0 | 77.8 → 65.3 (`-12.5`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-02_HERESY_PLUS1` | GC-02 (Czarny Rynek): heresy 1 → 2 | 77.8 → 🟠 ** 65.0** (`-12.8`) | 0.0 | 77.8 → 65.0 (`-12.8`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_GC-04_HERESY_PLUS1` | GC-04 (Informator): heresy 1 → 2 | 77.8 → 🟠 ** 64.4** (`-13.4`) | 0.0 | 77.8 → 64.4 (`-13.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-09_COST_MINUS1` | KT-09 (Fragment Kodeksu): cost 2 → 1 | 77.8 → 🟠 ** 62.2** (`-15.6`) | 0.0 | 77.8 → 62.2 (`-15.6`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-09_COST_MINUS1` | KB-09 (Dekret Królewski): cost 4 → 3 | 77.8 → 🟠 ** 60.7** (`-17.1`) | 0.0 | 77.8 → 60.7 (`-17.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-09_HERESY_MINUS1` | KT-09 (Fragment Kodeksu): heresy 1 → 0 | 77.8 → 🔴 ** 48.7** (`-29.1`) | 0.0 | 77.8 → 48.7 (`-29.1`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-09_HERESY_MINUS1` | KB-09 (Dekret Królewski): heresy 1 → 0 | 77.8 → 🔴 ** 47.4** (`-30.4`) | 0.0 | 77.8 → 47.4 (`-30.4`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KT-05_COST_PLUS1` | KT-05 (Wskazówka Cyklu): cost 1 → 2 | 77.8 → 🔴 ** 44.8** (`-33.0`) | 0.0 | 77.8 → 44.8 (`-33.0`) | 0.0 | 🔴 POGARSZA GLOBALNIE |
| `L3_KB-10_HERESY_PLUS1` | KB-10 (Pieczęć Korony): heresy 2 → 3 | 77.8 → 🔴 ** 41.5** (`-36.3`) | 0.0 | 77.8 → 41.5 (`-36.3`) | 0.0 | 🔴 POGARSZA GLOBALNIE |

</details>

## 2. Pełna Tabela Telemetrii 5 Filarów z Zakresami (Min / Średnia / Max) i Zgodnością Norm

### 🌟 Telemetria Wariantów z Zyskiem (4)

| ID | Długość Gry (Ery) [Min–Max] | Deadlocks % (<15%) | Pas Biedy % (<30%) | Autodafé / Partię [Min–Max] | Oskarżenia / Partię [Min–Max] | Złoto End [Min–Max] | Herezja End [Min–Max] | Weryfikacja Norm Telemetrii |
| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
| `L3_BAZA` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-11_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.41zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-11_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.19 (0–26) | 16.31zł (1.2–46.8) | 6.99 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-03_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.19 (0–26) | 16.31zł (1.2–46.8) | 6.99 (0.2–10.0) | 🟢 W NORMIE |

<details>
<summary><b>🔻 Pokaż telemetrię pozostałych 183 wariantów bez zysku...</b></summary>

| ID | Długość Gry (Ery) [Min–Max] | Deadlocks % (<15%) | Pas Biedy % (<30%) | Autodafé / Partię [Min–Max] | Oskarżenia / Partię [Min–Max] | Złoto End [Min–Max] | Herezja End [Min–Max] | Weryfikacja Norm Telemetrii |
| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
| `L3_CAA-01_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-01_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-03_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.21zł (1.0–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-05_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.22zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-07_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-07_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-09_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.23zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-10_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.59zł (1.5–47.0) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-11_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-11_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-11_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-01_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-01_HERESY_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-03_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-05_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-07_COST_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-07_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-10_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-11_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-12_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-12_HERESY_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-03_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-03_HERESY_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-06_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-01_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-02_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-04_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-07_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-07_HERESY_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-08_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-09_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-11_COST_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.15 (0–26) | 16.41zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-11_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-12_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-12_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-12_HERESY_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-01_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-01_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-01_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-02_COST_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.53zł (1.2–47.0) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-03_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-03_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-03_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-05_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.28zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-05_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-06_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-06_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-06_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-07_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-07_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-07_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-09_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-09_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-09_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-10_HERESY_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.23 (0–5) | 4.13 (0–26) | 16.38zł (1.2–46.5) | 6.87 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-12_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-12_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-02_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.15 (0–26) | 16.25zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-04_HERESY_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.15 (0–26) | 16.41zł (1.2–46.8) | 7.01 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-10_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.21zł (1.0–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-12_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.15 (0–26) | 16.25zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-02_COST_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.5% | 2.22 (0–5) | 4.14 (0–26) | 16.51zł (1.2–47.0) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-05_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.32zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-07_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-08_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.15 (0–26) | 16.41zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-12_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-03_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.8% | 2.22 (0–5) | 4.15 (0–21) | 16.43zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-01_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.38zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-01_COST_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-04_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-08_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-11_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.2–46.8) | 7.00 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-06_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.13 (0–26) | 16.26zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-06_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.14 (0–26) | 16.50zł (1.5–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-07_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-11_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-02_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.28zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-02_HERESY_PLUS1` | 6.26 Er (1–14) | 0.4% | 1.5% | 2.17 (0–5) | 4.19 (0–25) | 16.66zł (1.2–46.5) | 7.15 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-11_HERESY_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.13 (0–26) | 16.39zł (1.2–46.8) | 6.93 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-08_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.13 (0–26) | 16.34zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-02_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.38zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-07_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-08_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-08_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.15 (0–26) | 16.40zł (1.2–46.8) | 7.01 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-06_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.15 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-09_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.5–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-01_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.41zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-01_COST_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.41zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-09_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.52zł (1.5–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-04_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-06_HERESY_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.5% | 2.22 (0–5) | 4.24 (0–26) | 16.42zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-03_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.15 (0–26) | 16.41zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-06_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.15 (0–26) | 16.50zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-01_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 0.9% | 2.21 (0–5) | 4.17 (0–26) | 16.39zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-05_HERESY_PLUS1` | 6.22 Er (1–14) | 0.3% | 1.5% | 2.22 (0–5) | 4.20 (0–26) | 16.47zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-11_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.10 (0–26) | 16.46zł (1.2–46.8) | 6.91 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-05_HERESY_PLUS1` | 6.15 Er (1–14) | 0.2% | 1.6% | 2.19 (0–5) | 4.14 (0–24) | 16.21zł (1.2–46.5) | 7.08 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-01_HERESY_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.15 (0–26) | 16.37zł (1.2–46.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-05_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.17 (0–26) | 16.45zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-10_COST_PLUS1` | 6.26 Er (1–14) | 0.3% | 1.5% | 2.24 (0–5) | 4.18 (0–26) | 16.50zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-04_COST_MINUS1` | 6.19 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.13 (0–26) | 16.47zł (1.2–45.0) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-08_HERESY_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.12 (0–26) | 16.40zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-11_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.13 (0–26) | 16.43zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-04_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.15 (0–26) | 16.50zł (1.5–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-09_COST_PLUS1` | 6.23 Er (1–14) | 0.3% | 1.8% | 2.23 (0–5) | 4.15 (0–26) | 16.35zł (1.5–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-03_HERESY_PLUS1` | 6.22 Er (1–14) | 0.3% | 1.5% | 2.22 (0–5) | 4.24 (0–27) | 16.47zł (1.2–46.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-03_HERESY_MINUS1` | 6.25 Er (1–14) | 0.3% | 1.6% | 2.23 (0–5) | 4.14 (0–27) | 16.56zł (1.2–47.0) | 6.84 (0.0–10.0) | 🟢 W NORMIE |
| `L3_GC-10_COST_PLUS1` | 6.20 Er (1–14) | 0.2% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.38zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-06_COST_PLUS1` | 6.20 Er (1–14) | 0.2% | 1.5% | 2.21 (0–5) | 4.14 (0–26) | 16.40zł (1.5–47.0) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-02_HERESY_PLUS1` | 6.14 Er (1–14) | 0.2% | 1.6% | 2.20 (0–5) | 4.14 (0–26) | 16.18zł (1.2–46.5) | 7.07 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-04_COST_PLUS1` | 6.19 Er (1–14) | 0.3% | 1.6% | 2.17 (0–5) | 4.13 (0–27) | 16.55zł (1.2–47.2) | 6.94 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-04_HERESY_PLUS1` | 6.19 Er (1–14) | 0.3% | 1.6% | 2.17 (0–5) | 4.13 (0–27) | 16.55zł (1.2–47.2) | 6.94 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-06_COST_PLUS1` | 6.23 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.15 (0–26) | 16.37zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-04_COST_MINUS1` | 6.15 Er (1–14) | 0.3% | 1.2% | 2.19 (0–5) | 4.12 (0–26) | 16.30zł (1.5–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-10_COST_PLUS1` | 6.23 Er (1–14) | 0.3% | 1.5% | 1.79 (0–4) | 4.12 (0–26) | 17.15zł (1.2–48.8) | 6.74 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-12_COST_MINUS1` | 6.20 Er (1–14) | 0.2% | 1.6% | 2.27 (0–5) | 4.18 (0–26) | 16.27zł (1.2–47.0) | 7.02 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-10_HERESY_PLUS1` | 6.19 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.32 (0–26) | 16.35zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-10_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.14 (0–26) | 16.49zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-04_COST_PLUS1` | 6.22 Er (1–14) | 0.3% | 1.5% | 2.22 (0–5) | 4.16 (0–26) | 16.32zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-08_COST_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.06 (0–26) | 16.46zł (1.2–46.8) | 6.94 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-11_COST_MINUS1` | 6.17 Er (1–14) | 0.2% | 1.6% | 2.21 (0–5) | 4.17 (0–26) | 16.29zł (1.2–46.8) | 7.10 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-10_HERESY_MINUS1` | 6.12 Er (1–14) | 0.2% | 1.6% | 2.18 (0–5) | 4.16 (0–26) | 15.66zł (1.2–46.5) | 6.99 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-12_HERESY_PLUS1` | 6.14 Er (1–14) | 0.2% | 1.6% | 2.20 (0–5) | 4.13 (0–25) | 16.16zł (1.2–46.0) | 7.06 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-03_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 0.9% | 2.21 (0–5) | 4.18 (0–25) | 16.38zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-11_COST_MINUS1` | 6.20 Er (1–14) | 0.3% | 0.8% | 2.21 (0–5) | 4.15 (0–23) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-12_COST_MINUS1` | 6.17 Er (1–14) | 0.3% | 1.2% | 2.19 (0–5) | 4.13 (0–20) | 16.37zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-03_HERESY_PLUS1` | 6.14 Er (1–14) | 0.2% | 1.6% | 2.19 (0–5) | 4.14 (0–26) | 16.18zł (1.2–46.5) | 7.08 (0.5–10.0) | 🟢 W NORMIE |
| `L3_CAA-06_HERESY_PLUS1` | 6.18 Er (1–14) | 0.2% | 1.6% | 2.21 (0–5) | 4.15 (0–26) | 16.33zł (1.2–46.2) | 7.05 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-04_HERESY_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.07 (0–26) | 16.30zł (1.2–46.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-08_COST_PLUS1` | 6.19 Er (1–14) | 0.3% | 1.6% | 2.17 (0–5) | 4.12 (0–23) | 16.54zł (1.2–46.5) | 6.94 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-08_HERESY_PLUS1` | 6.19 Er (1–14) | 0.3% | 1.6% | 2.17 (0–5) | 4.12 (0–23) | 16.54zł (1.2–46.5) | 6.94 (0.2–10.0) | 🟢 W NORMIE |
| `L3_SO-10_HERESY_PLUS1` | 6.24 Er (1–14) | 0.3% | 1.5% | 1.79 (0–4) | 4.12 (0–26) | 17.16zł (1.2–47.0) | 6.74 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-04_HERESY_PLUS1` | 6.15 Er (1–14) | 0.2% | 1.5% | 2.19 (0–5) | 4.17 (0–26) | 16.35zł (1.5–46.8) | 7.02 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-08_HERESY_PLUS1` | 6.22 Er (1–14) | 0.2% | 1.6% | 2.23 (0–5) | 4.22 (0–25) | 16.61zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-12_COST_PLUS1` | 6.26 Er (1–14) | 0.3% | 1.6% | 2.24 (0–5) | 4.16 (0–27) | 16.49zł (1.2–46.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-08_COST_MINUS1` | 6.15 Er (1–14) | 0.3% | 1.3% | 2.19 (0–5) | 4.14 (0–27) | 16.30zł (1.2–46.8) | 7.00 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-10_COST_MINUS1` | 6.14 Er (1–14) | 0.3% | 1.5% | 2.18 (0–5) | 4.09 (0–25) | 16.30zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-05_HERESY_MINUS1` | 6.17 Er (1–14) | 0.3% | 1.6% | 2.20 (0–5) | 4.02 (0–27) | 16.25zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-07_COST_MINUS1` | 6.14 Er (1–14) | 0.2% | 1.3% | 2.19 (0–5) | 4.14 (0–26) | 16.30zł (1.2–46.8) | 7.01 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-06_COST_PLUS1` | 6.17 Er (1–14) | 0.3% | 1.6% | 2.20 (0–5) | 4.08 (0–26) | 16.14zł (1.5–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-02_COST_MINUS1` | 6.15 Er (1–14) | 0.2% | 1.2% | 2.18 (0–5) | 4.09 (0–26) | 16.33zł (1.5–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-07_HERESY_PLUS1` | 6.20 Er (1–14) | 0.2% | 1.6% | 2.22 (0–5) | 4.20 (0–25) | 16.58zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-10_HERESY_MINUS1` | 6.20 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.06 (0–26) | 16.34zł (1.2–46.8) | 6.88 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-10_HERESY_MINUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 3.98 (0–26) | 16.39zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-01_HERESY_PLUS1` | 6.20 Er (1–14) | 0.3% | 1.5% | 2.21 (0–5) | 4.11 (0–26) | 16.42zł (1.2–46.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-05_COST_MINUS1` | 6.15 Er (1–14) | 0.3% | 1.2% | 2.19 (0–5) | 4.11 (0–26) | 16.31zł (1.5–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-11_COST_PLUS1` | 6.19 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.09 (0–21) | 16.46zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-01_COST_PLUS1` | 6.21 Er (1–14) | 0.3% | 1.6% | 2.21 (0–5) | 4.11 (0–26) | 16.46zł (1.2–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-06_HERESY_PLUS1` | 6.17 Er (1–14) | 0.3% | 1.6% | 2.20 (0–5) | 4.19 (0–26) | 16.29zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-05_COST_PLUS1` | 6.25 Er (1–14) | 0.3% | 1.4% | 2.24 (0–5) | 4.20 (0–27) | 16.44zł (1.5–46.8) | 6.99 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-04_COST_PLUS1` | 6.22 Er (1–14) | 0.3% | 1.6% | 2.23 (0–5) | 4.13 (0–26) | 16.52zł (1.2–46.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-08_COST_MINUS1` | 5.95 Er (1–14) | 0.1% | 1.6% | 2.11 (0–5) | 4.07 (0–24) | 15.59zł (1.2–44.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-09_HERESY_PLUS1` | 6.16 Er (1–14) | 0.3% | 1.6% | 2.20 (0–5) | 4.19 (0–26) | 16.28zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-02_HERESY_PLUS1` | 6.22 Er (1–14) | 0.2% | 1.7% | 2.23 (0–5) | 4.29 (0–26) | 16.56zł (1.2–46.8) | 7.02 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-12_HERESY_PLUS1` | 6.22 Er (1–14) | 0.3% | 1.6% | 2.23 (0–5) | 4.24 (0–25) | 16.57zł (1.2–46.8) | 6.99 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-08_COST_MINUS1` | 6.11 Er (1–14) | 0.2% | 1.5% | 2.18 (0–5) | 4.23 (0–26) | 16.05zł (1.2–46.5) | 7.02 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-05_COST_MINUS1` | 6.13 Er (1–14) | 0.3% | 1.6% | 2.20 (0–5) | 4.07 (0–26) | 16.18zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-07_COST_PLUS1` | 6.15 Er (1–14) | 0.2% | 1.4% | 2.19 (0–5) | 3.99 (0–24) | 16.16zł (1.2–46.8) | 6.91 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-09_HERESY_PLUS1` | 6.06 Er (1–14) | 0.2% | 1.6% | 2.17 (0–5) | 4.15 (0–28) | 15.94zł (1.2–47.2) | 7.16 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-10_COST_PLUS1` | 6.11 Er (1–14) | 0.3% | 1.6% | 2.19 (0–5) | 4.00 (0–26) | 15.91zł (1.5–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-08_COST_PLUS1` | 6.13 Er (1–14) | 0.2% | 1.4% | 2.19 (0–5) | 3.98 (0–21) | 16.10zł (1.2–46.8) | 6.91 (0.2–10.0) | 🟢 W NORMIE |
| `L3_CAA-10_HERESY_PLUS1` | 6.06 Er (1–14) | 0.2% | 1.6% | 2.17 (0–5) | 4.14 (0–28) | 15.94zł (1.2–46.5) | 7.20 (0.8–10.0) | 🟢 W NORMIE |
| `L3_KT-03_COST_PLUS1` | 6.29 Er (1–14) | 0.3% | 1.6% | 2.23 (0–5) | 4.20 (0–26) | 16.63zł (1.2–46.5) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-02_COST_MINUS1` | 6.11 Er (1–14) | 0.3% | 1.6% | 2.19 (0–5) | 4.05 (0–26) | 16.03zł (1.2–47.0) | 6.99 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-06_HERESY_MINUS1` | 6.23 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.09 (0–26) | 16.46zł (1.2–46.8) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-09_HERESY_MINUS1` | 6.23 Er (1–14) | 0.3% | 1.6% | 2.22 (0–5) | 4.08 (0–26) | 16.49zł (1.2–47.0) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-04_HERESY_MINUS1` | 6.25 Er (1–14) | 0.3% | 1.6% | 2.23 (0–5) | 4.11 (0–26) | 16.54zł (1.2–47.0) | 6.95 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-02_HERESY_MINUS1` | 6.25 Er (1–14) | 0.3% | 1.6% | 2.23 (0–5) | 4.11 (0–26) | 16.55zł (1.2–47.0) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-02_COST_PLUS1` | 6.34 Er (1–14) | 0.3% | 1.7% | 2.27 (0–5) | 4.14 (0–21) | 17.08zł (1.2–46.8) | 6.91 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-09_HERESY_PLUS1` | 6.26 Er (1–14) | 0.3% | 1.5% | 2.24 (0–5) | 4.36 (0–26) | 16.67zł (1.2–46.8) | 7.04 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-04_COST_PLUS1` | 6.08 Er (1–14) | 0.2% | 1.5% | 2.15 (0–5) | 4.02 (0–24) | 16.06zł (1.8–46.8) | 7.00 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-10_COST_MINUS1` | 6.06 Er (1–14) | 0.2% | 1.6% | 2.16 (0–5) | 4.23 (0–26) | 15.46zł (1.2–46.5) | 7.01 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-02_COST_PLUS1` | 6.29 Er (1–14) | 0.3% | 1.5% | 2.23 (0–5) | 4.09 (0–26) | 16.66zł (1.5–46.8) | 6.96 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-09_COST_PLUS1` | 6.30 Er (1–14) | 0.3% | 1.4% | 2.26 (0–5) | 4.29 (0–23) | 16.67zł (1.2–46.8) | 7.01 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-10_COST_MINUS1` | 6.31 Er (1–14) | 0.3% | 1.5% | 2.24 (0–5) | 4.23 (0–26) | 16.94zł (1.5–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-02_HERESY_PLUS1` | 6.15 Er (1–14) | 0.3% | 1.6% | 2.20 (0–5) | 4.19 (0–26) | 16.22zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_GC-04_HERESY_PLUS1` | 6.15 Er (1–14) | 0.3% | 1.5% | 2.20 (0–5) | 4.18 (0–26) | 16.23zł (1.2–46.8) | 6.97 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-09_COST_MINUS1` | 6.05 Er (1–14) | 0.2% | 1.7% | 2.18 (0–5) | 4.08 (0–22) | 15.45zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-09_COST_MINUS1` | 6.05 Er (1–14) | 0.2% | 1.8% | 2.16 (0–5) | 3.88 (0–23) | 15.92zł (1.2–46.8) | 6.85 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-09_HERESY_MINUS1` | 5.98 Er (1–14) | 0.2% | 1.7% | 2.16 (0–5) | 3.94 (0–21) | 14.98zł (1.2–46.8) | 6.99 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-09_HERESY_MINUS1` | 6.06 Er (1–14) | 0.3% | 1.9% | 2.16 (0–5) | 3.72 (0–21) | 15.72zł (1.2–46.8) | 6.79 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KT-05_COST_PLUS1` | 6.43 Er (1–14) | 0.5% | 1.4% | 2.26 (0–5) | 4.22 (0–26) | 17.63zł (1.2–46.8) | 6.94 (0.2–10.0) | 🟢 W NORMIE |
| `L3_KB-10_HERESY_PLUS1` | 6.52 Er (1–14) | 0.6% | 1.3% | 2.33 (0–5) | 4.55 (0–26) | 17.61zł (1.2–46.8) | 6.98 (0.2–10.0) | 🟢 W NORMIE |

</details>